// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createGHA command inputs openapi should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-openapi.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA command inputs openapi should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: openapi petstore.json --key=\${{ secrets.README_API_KEY }} --id=spec_id
"
`;

exports[`#createGHA command inputs openapi should run GHA creation workflow with \`--github\` flag and generate valid workflow file 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-openapi-with-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA command inputs openapi should run GHA creation workflow with \`--github\` flag and generate valid workflow file 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-openapi:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`openapi\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: openapi petstore.json --key=\${{ secrets.README_API_KEY }} --id=spec_id
"
`;

exports[`#createGHA command inputs validate should run GHA creation workflow and generate valid workflow file 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-validate.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA command inputs validate should run GHA creation workflow and generate valid workflow file 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`some-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - some-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate petstore.json
"
`;

exports[`#createGHA command inputs validate should run GHA creation workflow with \`--github\` flag and generate valid workflow file 1`] = `
"
Your GitHub Action has been created! ✨

You're almost finished! Just a couple more steps:
1. Commit and push your newly created file (.github/workflows/rdme-validate-with-github-flag.yml) to GitHub 🚀
2. Create a GitHub secret called \`README_API_KEY\` and populate that with a ReadMe API key 🔑"
`;

exports[`#createGHA command inputs validate should run GHA creation workflow with \`--github\` flag and generate valid workflow file 2`] = `
"# This GitHub Action workflow was auto-generated by the \`rdme\` cli on 2022-01-01T00:00:00.000Z
# You can view our full documentation here: https://docs.readme.com/docs/rdme
name: ReadMe GitHub Action 🦉

on:
  push:
    branches:
      # This workflow will run every time you push code to the following branch: \`another-branch\`
      # Check out GitHub's docs for more info on configuring this:
      # https://docs.github.com/actions/using-workflows/events-that-trigger-workflows
      - another-branch

jobs:
  rdme-validate:
    runs-on: ubuntu-latest
    steps:
      - name: Check out repo 📚
        uses: actions/checkout@v3

      - name: Run \`validate\` command 🚀
        uses: readmeio/rdme@7.5.0
        with:
          rdme: validate petstore.json
"
`;
